@@ -2,21 +2,18 @@ package com.personalproject.moviecontrol.services;
 
 import com.personalproject.moviecontrol.dtos.MovieWatchDTO;
 import com.personalproject.moviecontrol.models.Movie;
-import com.personalproject.moviecontrol.models.Viewer;
 import com.personalproject.moviecontrol.models.MovieWatch;
+import com.personalproject.moviecontrol.models.Viewer;
 import com.personalproject.moviecontrol.repositories.MovieRepository;
-import com.personalproject.moviecontrol.repositories.ViewerRepository;
 import com.personalproject.moviecontrol.repositories.MovieWatchRepository;
+import com.personalproject.moviecontrol.repositories.ViewerRepository;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class MovieWatchService {
@@ -39,14 +36,22 @@ public class MovieWatchService {
         return this.movieWatchRepository.findByViewerId(viewerId)
                 .stream()
                 .map(MovieWatch::getMovie)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Viewer> findViewersByMovieId(UUID movieId) {
-        return movieWatchRepository.findByMovieId(movieId)
+        return this.movieWatchRepository.findByMovieId(movieId)
                 .stream()
                 .map(MovieWatch::getViewer)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public int getTotalViews(UUID movieId) {
+        return this.movieWatchRepository.getTotalViews(movieId);
+    }
+
+    public int getMoviesWatchedCount(UUID viewerId) {
+        return this.movieWatchRepository.countMoviesWatchedByViewer(viewerId);
     }
 
     @Transactional
